Update 'py-tt-radin-test' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.l3j1h3f2d2q5c4m.gpza.p3.openshiftapps.com/rhtap/randomtest:6dde68e44f1bf4f6ef6ab153be871dfca15fec60@sha256:52f4773d1b7a82b3143733b4f191d6bb03ccf37cb78d569e75b586f02221db25

--- a/components/py-tt-radin-test/overlays/development/deployment-patch.yaml
+++ b/components/py-tt-radin-test/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: py-tt-radin-test
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.l3j1h3f2d2q5c4m.gpza.p3.openshiftapps.com/rhtap/randomtest:6dde68e44f1bf4f6ef6ab153be871dfca15fec60@sha256:52f4773d1b7a82b3143733b4f191d6bb03ccf37cb78d569e75b586f02221db25
+          name: container-image
